basic control rendering, form and text box controls added

--- a/tests/test.html
+++ b/tests/test.html
@@ -11,15 +11,21 @@
 
   <body>
 
-    <span class='red'>Form Engine Test</span>
+    <h3>Form Engine Test</h3>
 
     <div id='formContainer'></div>
 
+    <!-- formEngine.js -->
     <script type='text/javascript' src='../src/formEngine.js'></script>
-    <script type='text/javascript' src='test.js'></script>
 
+    <!-- libraries and library dependent extensions -->
     <script type='text/javascript' src='../libs/jquery-1.4.2.js'></script>
     <script type='text/javascript' src='../libs/jquery-ui/jquery-ui-1.8.4.custom.min.js'></script>    
+    <script type='text/javascript' src='../src/extensions/formEngine.jqControls.js'></script>
+
+    <!-- form -->
+    <script type='text/javascript' src='test.js'></script>
+
   </body>
 
 </html>
