templates from Underscore.js lib added to render control content

--- a/tests/test.html
+++ b/tests/test.html
@@ -15,8 +15,9 @@
 
     <div id='formContainer'></div>
 
-    <!-- formEngine.js -->
+    <!-- formEngine -->
     <script type='text/javascript' src='../src/formEngine.js'></script>
+    <script type='text/javascript' src='../src/formEngine.utils.js'></script>
 
     <!-- libraries and library dependent extensions -->
     <script type='text/javascript' src='../libs/jquery-1.4.2.js'></script>
