--- a/tests/test.html
+++ b/tests/test.html
@@ -3,20 +3,20 @@
 <html lang="en">
 
   <head>
-    <link rel="stylesheet" type="text/css" href="../src/formEngine.css" />
     <link rel="stylesheet" type="text/css" href="../libs/jquery-ui/css/smoothness/jquery-ui-1.8.4.custom.css" />
-
-    <title>Form Engine Test</title>
+    <link rel="stylesheet" type="text/css" href="../src/formEngine.css" />
+    <title>FormEngine: Simple Test Form</title>
   </head>
 
   <body>
 
-    <h3>Form Engine Test</h3>
+    <h3>FormEngine: Simple Test Form</h3>
 
     <div id='formContainer'></div>
 
     <!-- formEngine -->
     <script type='text/javascript' src='../src/formEngine.js'></script>
+    <script type='text/javascript' src='../src/formEngine.controlBase.js'></script>
     <script type='text/javascript' src='../src/formEngine.utils.js'></script>
 
     <!-- libraries and library dependent extensions -->
