--- a/samples/simple.html
+++ b/samples/simple.html
@@ -5,19 +5,19 @@
   <head>
     <link rel="stylesheet" type="text/css" href="../libs/jquery-ui/css/smoothness/jquery-ui-1.8.4.custom.css" />
     <link rel="stylesheet" type="text/css" href="../src/formEngine.css" />
-    <title>FormEngine: Simple Test Form</title>
+    <title>FormEngine: Simple Form</title>
   </head>
 
   <body>
 
-    <h3>FormEngine: Simple Test Form</h3>
+    <h3>FormEngine: Simple Form</h3>
 
     <div id='formContainer'></div>
 
     <!-- formEngine -->
     <script type='text/javascript' src='../src/formEngine.js'></script>
-    <script type='text/javascript' src='../src/formEngine.controlBase.js'></script>
     <script type='text/javascript' src='../src/formEngine.utils.js'></script>
+    <script type='text/javascript' src='../src/formEngine.controlBase.js'></script>
 
     <!-- libraries and library dependent extensions -->
     <script type='text/javascript' src='../libs/jquery-1.4.2.js'></script>
@@ -25,7 +25,7 @@
     <script type='text/javascript' src='../src/extensions/formEngine.jqControls.js'></script>
 
     <!-- form -->
-    <script type='text/javascript' src='test.js'></script>
+    <script type='text/javascript' src='simple.js'></script>
 
   </body>
 
