very simple data binding

--- a/samples/simple.html
+++ b/samples/simple.html
@@ -4,7 +4,7 @@
 
   <head>
     <link rel="stylesheet" type="text/css" href="../libs/jquery-ui/css/smoothness/jquery-ui-1.8.4.custom.css" />
-    <link rel="stylesheet" type="text/css" href="../src/formEngine.css" />
+    <link rel="stylesheet" type="text/css" href="../src/extensions/formEngine.jqControls.css" />
     <title>FormEngine: Simple Form</title>
   </head>
 
