DSL extend function, checkBox control

--- a/samples/index.html
+++ b/samples/index.html
@@ -12,7 +12,7 @@
 
     <ol>
       <li><a href='simple.html'>Simple Form</a></li>
-      <li><a href='simple_lang.html'>Simple Form Using DSL</a></li>
+      <li><a href='simple_lang.html'>Simple Form (DSL)</a></li>
       <li><a href='markup_generation_perf.html'>Markup Generation Performace Check</a></li>      
     </ol>
 
