--- a/samples/simple_lang.html
+++ b/samples/simple_lang.html
@@ -5,12 +5,12 @@
   <head>
     <link rel="stylesheet" type="text/css" href="../libs/jquery-ui/css/smoothness/jquery-ui-1.8.4.custom.css" />
     <link rel="stylesheet" type="text/css" href="../src/extensions/formEngine.jqControls.css" />
-    <title>FormEngine: Simple Form</title>
+    <title>FormEngine: Simple Form (DSL)</title>
   </head>
 
   <body>
 
-    <h3>FormEngine: Simple Form</h3>
+    <h3>FormEngine: Simple Form (DSL)</h3>
 
     <div id='formContainer'></div>
 
