--- a/samples/index.html
+++ b/samples/index.html
@@ -11,9 +11,8 @@
     <h3>FormEngine Samples</h3>
 
     <ol>
-      <li><a href='simple.html'>Simple Form</a></li>
       <li><a href='simple_lang.html'>Simple Form (DSL)</a></li>
-      <li><a href='markup_generation_perf.html'>Markup Generation Performace Check</a></li>      
+      <li><a href='markup_generation_perf.html'>Markup Generation Performace Check (JSON)</a></li>
     </ol>
 
   </body>
