--- a/tests/run-tests.html
+++ b/tests/run-tests.html
@@ -8,8 +8,14 @@
   <link href="libs/jasmine.css" rel="stylesheet"/>
 
   <script type="text/javascript" src="../source/fe.js"></script>
+  <script type="text/javascript" src="../source/fe.engine.js"></script>
+  <script type="text/javascript" src="../source/fe.model.js"></script>
+  <script type="text/javascript" src="../source/fe.view.js"></script>
 
   <script type="text/javascript" src="source/fe.tests.js"></script>
+  <script type="text/javascript" src="source/fe.engine.tests.js"></script>
+  <script type="text/javascript" src="source/fe.model.tests.js"></script>
+  <script type="text/javascript" src="source/fe.view.tests.js"></script>
 
   <script type="text/javascript">
     (function() {
