element and metadataProvider stubs, test combining

--- a/tests/run-tests.html
+++ b/tests/run-tests.html
@@ -11,11 +11,15 @@
   <script type="text/javascript" src="../source/fe.engine.js"></script>
   <script type="text/javascript" src="../source/fe.model.js"></script>
   <script type="text/javascript" src="../source/fe.view.js"></script>
+  <script type="text/javascript" src="../source/fe.element.js"></script>
+  <script type="text/javascript" src="../source/fe.metadataProvider.js"></script>
 
   <script type="text/javascript" src="source/fe.tests.js"></script>
   <script type="text/javascript" src="source/fe.engine.tests.js"></script>
   <script type="text/javascript" src="source/fe.model.tests.js"></script>
   <script type="text/javascript" src="source/fe.view.tests.js"></script>
+  <script type="text/javascript" src="source/fe.element.tests.js"></script>
+  <script type="text/javascript" src="source/fe.metadataProvider.tests.js"></script>
 
   <script type="text/javascript">
     (function() {
