sample from design doc runs without errors

--- a/tests/run-tests.html
+++ b/tests/run-tests.html
@@ -20,6 +20,7 @@
   <script type="text/javascript" src="source/fe.view.tests.js"></script>
   <script type="text/javascript" src="source/fe.element.tests.js"></script>
   <script type="text/javascript" src="source/fe.metadataProvider.tests.js"></script>
+  <script type="text/javascript" src="source/formEngine.tests.js"></script>
 
   <script type="text/javascript">
     (function() {
