--- a/tests/run-tests.html
+++ b/tests/run-tests.html
@@ -13,14 +13,14 @@
   <script type="text/javascript" src="../source/fe.view.js"></script>
   <script type="text/javascript" src="../source/fe.element.js"></script>
   <script type="text/javascript" src="../source/fe.metadataProvider.js"></script>
+  <script type="text/javascript" src="../tests/source/fe.tests.js"></script>
+  <script type="text/javascript" src="../tests/source/fe.engine.tests.js"></script>
+  <script type="text/javascript" src="../tests/source/fe.model.tests.js"></script>
+  <script type="text/javascript" src="../tests/source/fe.view.tests.js"></script>
+  <script type="text/javascript" src="../tests/source/fe.element.tests.js"></script>
+  <script type="text/javascript" src="../tests/source/fe.metadataProvider.tests.js"></script>
+  <script type="text/javascript" src="../tests/source/formEngine.tests.js"></script>
 
-  <script type="text/javascript" src="source/fe.tests.js"></script>
-  <script type="text/javascript" src="source/fe.engine.tests.js"></script>
-  <script type="text/javascript" src="source/fe.model.tests.js"></script>
-  <script type="text/javascript" src="source/fe.view.tests.js"></script>
-  <script type="text/javascript" src="source/fe.element.tests.js"></script>
-  <script type="text/javascript" src="source/fe.metadataProvider.tests.js"></script>
-  <script type="text/javascript" src="source/formEngine.tests.js"></script>
 
   <script type="text/javascript">
     (function() {
