--- a/tests/tests.html
+++ b/tests/tests.html
@@ -9,6 +9,7 @@
 
   <script type="text/javascript" src="../source/fe.js"></script>
   <script type="text/javascript" src="../source/fe.rule.js"></script>
+  <script type="text/javascript" src="../source/fe.trigger.js"></script>
   <script type="text/javascript" src="../source/fe.engine.js"></script>
   <script type="text/javascript" src="../source/fe.model.js"></script>
   <script type="text/javascript" src="../source/fe.view.js"></script>
@@ -16,6 +17,7 @@
   <script type="text/javascript" src="../source/fe.metadataProvider.js"></script>
   <script type="text/javascript" src="../tests/source/fe.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.rule.tests.js"></script>
+  <script type="text/javascript" src="../tests/source/fe.trigger.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.engine.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.model.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.view.tests.js"></script>
