jquery extension: toolbar, button, jquery ui upgrade

--- a/extensions/jquery/samples/simple.html
+++ b/extensions/jquery/samples/simple.html
@@ -4,6 +4,7 @@
   <head>
     <title>FormEngine.js: Simple Form</title>
     <link href="../formEngine.jquery.css" rel="stylesheet"/>
+    <link href="../libs/jquery-ui/css/smoothness/jquery-ui-1.8.7.custom.css" rel="stylesheet"/>
   </head>
 
   <body>
@@ -15,6 +16,7 @@
     <script type="text/javascript" src="../../../formEngine.js"></script>
 
     <script type="text/javascript" src="../libs/jquery-1.4.4.js"></script>
+    <script type="text/javascript" src="../libs/jquery-ui/jquery-ui-1.8.7.custom.min.js"></script>
     <script type="text/javascript" src="../formEngine.jquery.js"></script>
 
     <script type="text/javascript" src="simple.js"></script>
