model.isValid() method, required validator

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -12,6 +12,7 @@
   <script type="text/javascript" src="../source/fe.trigger.js"></script>
   <script type="text/javascript" src="../source/fe.engine.js"></script>
   <script type="text/javascript" src="../source/fe.model.js"></script>
+  <script type="text/javascript" src="../source/fe.validators.js"></script>
   <script type="text/javascript" src="../source/fe.view.js"></script>
   <script type="text/javascript" src="../source/fe.element.js"></script>
   <script type="text/javascript" src="../source/fe.metadataProvider.js"></script>
@@ -20,6 +21,7 @@
   <script type="text/javascript" src="../tests/source/fe.trigger.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.engine.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.model.tests.js"></script>
+  <script type="text/javascript" src="../tests/source/fe.validators.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.view.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.element.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.metadataProvider.tests.js"></script>
