expressionParser extracted into separate function

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -15,6 +15,7 @@
   <script type="text/javascript" src="../source/fe.validators.js"></script>
   <script type="text/javascript" src="../source/fe.view.js"></script>
   <script type="text/javascript" src="../source/fe.element.js"></script>
+  <script type="text/javascript" src="../source/fe.expressionParser.js"></script>
   <script type="text/javascript" src="../source/fe.metadataProvider.js"></script>
   <script type="text/javascript" src="../tests/source/fe.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.rule.tests.js"></script>
@@ -24,6 +25,7 @@
   <script type="text/javascript" src="../tests/source/fe.validators.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.view.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.element.tests.js"></script>
+  <script type="text/javascript" src="../tests/source/fe.expressionParser.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.metadataProvider.tests.js"></script>
   <script type="text/javascript" src="../tests/source/formEngine.tests.js"></script>
 
