jquery extension samples

--- a/extensions/jquery/samples/new-customer.html
+++ b/extensions/jquery/samples/new-customer.html
@@ -2,14 +2,14 @@
 <html>
 
   <head>
-    <title>FormEngine.js: Simple Form</title>
+    <title>FormEngine.js: New Customer Sample</title>
     <link href="../formEngine.jquery.css" rel="stylesheet"/>
     <link href="../libs/jquery-ui/css/smoothness/jquery-ui-1.8.7.custom.css" rel="stylesheet"/>
   </head>
 
   <body>
 
-    <h3>Simple Form</h3>
+    <h3>New Customer</h3>
 
     <div id="container">
       <div id="view"></div>
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="../libs/jquery-ui/jquery-ui-1.8.7.custom.min.js"></script>
     <script type="text/javascript" src="../formEngine.jquery.js"></script>
 
-    <script type="text/javascript" src="simple.js"></script>
+    <script type="text/javascript" src="new-customer.js"></script>
   </body>
 
 </html> 
