validation suppressed for hidden and readonly controls

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -11,6 +11,7 @@
   <script type="text/javascript" src="../source/fe.rule.js"></script>
   <script type="text/javascript" src="../source/fe.trigger.js"></script>
   <script type="text/javascript" src="../source/fe.engine.js"></script>
+  <script type="text/javascript" src="../source/fe.validationRule.js"></script>
   <script type="text/javascript" src="../source/fe.model.js"></script>
   <script type="text/javascript" src="../source/fe.validators.js"></script>
   <script type="text/javascript" src="../source/fe.view.js"></script>
@@ -22,6 +23,7 @@
   <script type="text/javascript" src="../tests/source/fe.trigger.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.engine.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.model.tests.js"></script>
+  <script type="text/javascript" src="../tests/source/fe.validationRule.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.validators.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.view.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.element.tests.js"></script>
