--- a/extensions/jquery/samples/new-customer.html
+++ b/extensions/jquery/samples/new-customer.html
@@ -9,18 +9,24 @@
 
   <body>
 
+    <a href="index.html">All Samples</a>
+
     <h3>New Customer</h3>
 
     <div id="container">
       <div id="view"></div>
     </div>
 
+    <div id="dialog"></div>
+
     <script type="text/javascript" src="../../../formEngine.js"></script>
 
     <script type="text/javascript" src="../libs/jquery-1.4.4.js"></script>
     <script type="text/javascript" src="../libs/jquery-ui/jquery-ui-1.8.7.custom.min.js"></script>
+    <script type="text/javascript" src="../libs/json2.js"></script>
     <script type="text/javascript" src="../formEngine.jquery.js"></script>
 
+    <script type="text/javascript" src="utils.js"></script>
     <script type="text/javascript" src="new-customer.js"></script>
   </body>
 
