--- a/extensions/jquery/samples/visa-application.html
+++ b/extensions/jquery/samples/visa-application.html
@@ -9,11 +9,15 @@
 
   <body>
 
+    <a href="index.html">All Samples</a>
+
     <h3>Visa Application</h3>
 
     <div id="container">
       <div id="view"></div>
     </div>
+
+    <div id="dialog"></div>
 
     <script type="text/javascript" src="../../../formEngine.js"></script>
 
@@ -21,6 +25,7 @@
     <script type="text/javascript" src="../libs/jquery-ui/jquery-ui-1.8.7.custom.min.js"></script>
     <script type="text/javascript" src="../formEngine.jquery.js"></script>
 
+    <script type="text/javascript" src="utils.js"></script>
     <script type="text/javascript" src="visa-application.js"></script>
   </body>
 
