jquery samples added

--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-formEngine.js samples
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <title>FormEngine.js</title>
+  </head>
+
+  <body>
+
+    <h3>jQuery FormEngine.js Samples</h3>
+
+    <ul>
+      <li><a href="jquery/new-customer.html">New Customer</a> - data validation, making fields hidden or readonly using expressions</li>
+      <li><a href="jquery/visa-application.html">Visa Application</a> - wizard with step by step validation</li>
+    </ul>
+
+  </body>
+
+</html> 
+
+
