--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
   <body>
 
-    <h3>jQuery FormEngine.js Samples</h3>
+    <h1>formEngine.js</h1>
+
+    <h3>Samples based on jQuery and jQuery UI</h3>
 
     <ul>
       <li><a href="jquery/new-customer.html">New Customer</a> - data validation, making fields hidden or readonly using expressions</li>
