JavaScript DSL prototype

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -8,6 +8,7 @@
   <link href="libs/jasmine.css" rel="stylesheet"/>
 
   <script type="text/javascript" src="../source/fe.js"></script>
+  <script type="text/javascript" src="../source/fe.dsl.js"></script>
   <script type="text/javascript" src="../source/fe.rule.js"></script>
   <script type="text/javascript" src="../source/fe.trigger.js"></script>
   <script type="text/javascript" src="../source/fe.engine.js"></script>
@@ -19,6 +20,7 @@
   <script type="text/javascript" src="../source/fe.expressionParser.js"></script>
   <script type="text/javascript" src="../source/fe.metadataProvider.js"></script>
   <script type="text/javascript" src="../tests/source/fe.tests.js"></script>
+  <script type="text/javascript" src="../tests/source/fe.dsl.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.rule.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.trigger.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.engine.tests.js"></script>
