--- a/tests/tests.html
+++ b/tests/tests.html
@@ -15,6 +15,7 @@
   <script type="text/javascript" src="../source/fe.validationRule.js"></script>
   <script type="text/javascript" src="../source/fe.model.js"></script>
   <script type="text/javascript" src="../source/fe.validators.js"></script>
+  <script type="text/javascript" src="../source/fe.changeTracker.js"></script>
   <script type="text/javascript" src="../source/fe.view.js"></script>
   <script type="text/javascript" src="../source/fe.element.js"></script>
   <script type="text/javascript" src="../source/fe.expressionParser.js"></script>
@@ -27,6 +28,7 @@
   <script type="text/javascript" src="../tests/source/fe.model.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.validationRule.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.validators.tests.js"></script>
+  <script type="text/javascript" src="../tests/source/fe.changeTracker.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.view.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.element.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.expressionParser.tests.js"></script>
