jquery extension: change tracker support

--- a/extensions/jquery/samples/index.html
+++ b/extensions/jquery/samples/index.html
@@ -10,7 +10,7 @@
     <h3>FormEngine.js Samples (jQuery controls)</h3>
 
     <ul>
-      <li><a href="new-customer.html">New Customer</a> - data validation, making fields hidden or readonly using expressions</li>
+      <li><a href="new-customer.html">New Customer</a> - data validation, making fields hidden or readonly using expressions, change tracker (undo/redo)</li>
       <li><a href="visa-application.html">Visa Application</a> - wizard with step by step validation</li>
     </ul>
 
