--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
     <h3>Samples based on jQuery and jQuery UI</h3>
 
     <ul>
-      <li><a href="jquery/new-customer.html">New Customer</a> - data validation, making fields hidden or readonly using expressions</li>
+      <li><a href="jquery/new-customer.html">New Customer</a> - data validation,
+        making fields hidden or readonly using expressions, change tracker (undo/redo)</li>
       <li><a href="jquery/visa-application.html">Visa Application</a> - wizard with step by step validation</li>
     </ul>
 
   </body>
 
-</html> 
-
-
+</html>
