elements with calculated value get change notifications

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -10,7 +10,7 @@
   <script type="text/javascript" src="../source/fe.js"></script>
   <script type="text/javascript" src="../source/fe.dsl.js"></script>
   <script type="text/javascript" src="../source/fe.rule.js"></script>
-  <script type="text/javascript" src="../source/fe.trigger.js"></script>
+  <script type="text/javascript" src="../source/fe.triggers.js"></script>
   <script type="text/javascript" src="../source/fe.engine.js"></script>
   <script type="text/javascript" src="../source/fe.validationRule.js"></script>
   <script type="text/javascript" src="../source/fe.model.js"></script>
@@ -23,7 +23,7 @@
   <script type="text/javascript" src="../tests/source/fe.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.dsl.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.rule.tests.js"></script>
-  <script type="text/javascript" src="../tests/source/fe.trigger.tests.js"></script>
+  <script type="text/javascript" src="../tests/source/fe.triggers.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.engine.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.model.tests.js"></script>
   <script type="text/javascript" src="../tests/source/fe.validationRule.tests.js"></script>
